tests/harness/errors/097_div_by_zero_source_loc.eu
# Error: division by zero — error location should point to user's / operator, not the prelude
result: 1 / 0
